--- a/Lab4.vcxproj.filters
+++ b/Lab4.vcxproj.filters
@@ -10,6 +10,9 @@
 		<ClCompile Include="src\Dessin2D.cpp">
 			<Filter>src</Filter>
 		</ClCompile>
+		<ClCompile Include="src\Dessin3D.cpp">
+			<Filter>src</Filter>
+		</ClCompile>
 		<ClCompile Include="src\main.cpp">
 			<Filter>src</Filter>
 		</ClCompile>
@@ -111,6 +114,9 @@
 			<Filter>src</Filter>
 		</ClInclude>
 		<ClInclude Include="src\Dessin2D.h">
+			<Filter>src</Filter>
+		</ClInclude>
+		<ClInclude Include="src\Dessin3D.h">
 			<Filter>src</Filter>
 		</ClInclude>
 		<ClInclude Include="src\ofApp.h">
